--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "sprint planning poker",
   "main": "index.js",
   "scripts": {
-    "test": "start:test"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,26 @@
   "bugs": {
     "url": "https://github.com/eLeKaJota/planning-poker/issues"
   },
-  "homepage": "https://github.com/eLeKaJota/planning-poker#readme"
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
+  "homepage": "https://github.com/eLeKaJota/planning-poker#readme",
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "4.19.2",
+    "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "@html-eslint/eslint-plugin": "^0.24.1",
+    "@html-eslint/parser": "^0.24.1",
+    "eslint": "^9.2.0",
+    "globals": "^15.2.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  }
 }
