--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "4.19.2",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
